[tool.poetry]
name = "test-task"
version = "0.1.0"
description = ""
authors = ["V_Kovshov <ssevenn41@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.6"
requests = "^2.31.0"
wemake-python-styleguide = "^0.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
